<resources>
    <string name="app_name">animalapp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="not_registered">Not Registered</string>
    <string name="register">REGISTER</string>
    <string name="cofirm_password">Confirm Password</string>
    <string name="already_registerd">Already Registered?</string>
    <string name="cardiff">Cardiff</string>
...
